--- a/demo/meeting.html
+++ b/demo/meeting.html
@@ -1,21 +1,25 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>AWS Chime Backbone webclient</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        
-        <script src="BOOTSTRAP"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">        
+        <link rel="stylesheet" href="/vendor/bootstrap/bootstrap-4.5.0-dist/css/bootstrap.min.css" type="text/css">
     </head>
     <body>
     	<h1>AWS Chime Backbone webclient</h1>
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div id="cz-kibo-meeting-chime-app" data-meeting="abcdefg">
+        	<div class="loading">
+    			Loading ...
+    		</div>
+        </div>
 
-        <script src="JQUERY"></script>       
-        <script src="UNDERSCORE"></script>
-        <script src="BACKBONE"></script>
-        <script src="DISTRO/aws-chime-backbone-webclient.js"></script>
+       <script src="/vendor/jquery/jquery-3.5.1.min.js"></script>
+       <script src="/vendor/underscore/v1-10-2/underscore-min.js"></script>
+       <script src="/vendor/backbone/v1-4-0/backbone-min.js"></script>
+       <script src="/configs/demo.js"></script>
+	   <script src="/js/app.js"></script> 
     </body>
 </html>
