--- a/demo/meeting.html
+++ b/demo/meeting.html
@@ -5,21 +5,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>AWS Chime Backbone webclient</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">        
-        <link rel="stylesheet" href="/vendor/bootstrap/bootstrap-4.5.0-dist/css/bootstrap.min.css" type="text/css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" integrity="sha512-P5MgMn1jBN01asBgU0z60Qk4QxiXo86+wlFahKrsQf37c9cro517WzVSPPV1tDKzhku2iJ2FVgL67wG03SGnNA==" crossorigin="anonymous" />
     </head>
     <body>
-    	<h1>AWS Chime Backbone webclient</h1>
+    			
+		<div id="cz-kibo-meeting-chime-app" data-meeting="abcdefg">
+			<div class="loading">
+				Loading ...
+			</div>
+		</div>
 
-        <div id="cz-kibo-meeting-chime-app" data-meeting="abcdefg">
-        	<div class="loading">
-    			Loading ...
-    		</div>
-        </div>
-
-       <script src="/vendor/jquery/jquery-3.5.1.min.js"></script>
-       <script src="/vendor/underscore/v1-10-2/underscore-min.js"></script>
-       <script src="/vendor/backbone/v1-4-0/backbone-min.js"></script>
-       <script src="/configs/demo.js"></script>
-	   <script src="/js/app.js"></script> 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.12.0/underscore-min.js" integrity="sha512-BDXGXSvYeLxaldQeYJZVWXJmkisgMlECofWFXKpWwXnfcp/R708nrs/BtNLH5cb/5TE7aeYRTDBRXu6kRL4VeQ==" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.4.0/backbone-min.js" integrity="sha512-9EgQDzuYx8wJBppM4hcxK8iXc5a1rFLp/Chug4kIcSWRDEgjMiClF8Y3Ja9/0t8RDDg19IfY5rs6zaPS9eaEBw==" crossorigin="anonymous"></script>     
+		<script type="module" src="/client-chime.js"></script> 
     </body>
 </html>
