--- a/demo/meeting.html
+++ b/demo/meeting.html
@@ -8,10 +8,15 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" integrity="sha512-P5MgMn1jBN01asBgU0z60Qk4QxiXo86+wlFahKrsQf37c9cro517WzVSPPV1tDKzhku2iJ2FVgL67wG03SGnNA==" crossorigin="anonymous" />
     </head>
     <body>
-    			
-		<div id="cz-kibo-meeting-chime-client" data-meeting="abcdefg">
-			<div class="loading">
-				Loading ...
+    	<div class="container">	
+    		<div class="row">	
+    			<div class="col">
+					<div id="cz-kibo-meeting-chime-client" data-meeting="abcdefg">
+						<div class="loading">
+							Loading ...
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
