--- a/demo/meeting.html
+++ b/demo/meeting.html
@@ -9,14 +9,21 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" />
 	</head>
 	<body>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col">
 
-		<div id="cz-kibo-meeting-chime-client" data-meeting="abcdefg" data-title="AWS Chime">
-			<div class="text-center my-5">
-				<div class="spinner-border"></div>
-				<p>loading...</p>
+						<div id="cz-kibo-meeting-chime-client" data-meeting="abcdefg" data-title="AWS Chime">
+							<div class="text-center my-5">
+								<div class="spinner-border"></div>
+								<p>loading...</p>
+							</div>
+						</div>
+
+				</div>
 			</div>
 		</div>
 
-		<script src="/client-chime.js"></script>
+		<script src="/js/chime/client-chime.js"></script>
 	</body>
 </html>
