--- a/demo/meeting.html
+++ b/demo/meeting.html
@@ -13,7 +13,7 @@
 			<div class="row">
 				<div class="col">
 
-						<div id="cz-kibo-meeting-chime-client" data-meeting="abcdefg" data-title="AWS Chime">
+						<div id="cz-kibo-meeting-chime-client" data-meeting="60045dfb57a5d5294c5ca09f" data-title="testa-chat">
 							<div class="text-center my-5">
 								<div class="spinner-border"></div>
 								<p>loading...</p>
